style.css
/* Color Palette */
:root {
  --primary: #9E775E;
  --background: #FDF6E9;
  --accent-light: #F9DBC0;
  --accent-medium: #F8D4B9;
  --accent-dark: #F3AE80;
  --border-color: #FCEFDD;
  --font-color: #5C4433;
  --input-bg: #fff7ef;
  --hover-bg: #fff9f2;
  --selection-bg: #ffe6d4;
  --font-family: "Quicksand", sans-serif;
  --title-font-family: "Press Start 2P", system-ui;
}

/* 中文時字體調整 */
@font-face {
  font-family: 'BoutiqueBitmap9x9';
  src: url('./assets/fonts/BoutiqueBitmap9x9_Bold_1.8.ttf') format('truetype');
  font-display: swap;
}

@font-face {
  font-family: 'Cubic';
  src: url('./assets/fonts/Cubic_11.ttf') format('truetype');
  font-display: swap;
}

.lang-zh {
  --title-font-family: "Cubic", monospace;
}

.lang-zh h1,
.lang-zh h2 {
  font-size: 2.2rem;
  letter-spacing: 1rem;
}

.lang-zh .cta-button,
#submitBtn,
.loader-window,
.lang-zh .errorPage-window {
  font-size: 1.6rem;
  letter-spacing: 1rem;
}

.lang-zh .retro-btn {
  padding: 0.5rem 0.6rem 0.5rem 1.6rem;
}

/* Dark Mode */
.dark-mode {
  --primary: #EBC7A2;
  --background: #3E2F25;
  --accent-light: #5C4433;
  --accent-medium: #9E775E;
  --accent-dark: #C1916A;
  --border-color: #5C4433;
  --font-color: #F9DBC0;
  --input-bg: #5A4538;
  --selection-bg: #8C5E45;
  --hover-bg: #ffdfc520;
  ;
}

/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* 網站的 rem -> 10px */
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}

/* Body */
body {
  background-color: var(--background);
  color: var(--font-color);
  font-family: var(--font-family);
  font-weight: 600;
  line-height: 1.6;
  padding: 2rem;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  max-width: 100%;
}

/* Title Font */
h1,
h2 {
  font-family: var(--title-font-family);
  font-size: 1.8rem;
  letter-spacing: normal;
}

button {
  font-family: var(--font-family);
}

/* 鍵盤tab選取時的框框 */
button:focus-visible {
  outline: 2px dashed var(--primary);
  outline-offset: 1px;
  border-radius: 16px;
}

a:focus-visible {
  outline: 2px dashed var(--primary);
  outline-offset: 1px;
  border-radius: 16px;
}

/* 修正 autofill 背景顏色（Chrome/Safari） */
input:-webkit-autofill,
textarea:-webkit-autofill {
  box-shadow: 0 0 0px 1000px var(--input-bg) inset !important;
  /* 溫柔淡米色背景 */
  -webkit-text-fill-color: var(--font-color) !important;
  font-family: var(--font-family) !important;
  font-weight: 600 !important;
  transition: background-color 9999s ease-in-out 0s;
  /* 防止突然閃現原色 */
}

/* 自訂選取時的顏色（文字選取 highlight） */
input::selection,
textarea::selection {
  background-color: var(--selection-bg);
  /* 淡杏橘色 */
  color: var(--font-color);
}

/* 自訂scroll bar */
::-webkit-scrollbar {
  width: 12px;
  /* 垂直滾動條寬度 */
  height: 12px;
  /* 水平滾動條高度 */
}

::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: var(--background);
  border: 2px solid var(--border-color);
  box-shadow: inset 2px 2px var(--accent-light),
    inset -2px -2px var(--accent-medium);
}

::-webkit-scrollbar-thumb {
  background: linear-gradient(to bottom, var(--accent-medium), var(--accent-light));
  border: 1px solid var(--border-color);
  border-radius: 2px;
  box-shadow: inset 1px 1px white, inset -1px -1px var(--accent-dark);
}

::-webkit-scrollbar-thumb:hover {
  background: var(--accent-dark);
  box-shadow: inset 2px 2px var(--border-color);
}

/* 最外面有個可愛框框 */
.border-container {
  border: 2px solid var(--primary);
  border-radius: 1rem;
  padding: 2rem;
  max-width: 1200px;
  margin: 0 auto;
  /* 讓整個版面置中 */
  min-height: 95vh;
}

/* 把框框收起來 */
.shrink-down {
  animation: windowClose 0.5s ease forwards;
}

@keyframes windowClose {
  0% {
    transform: scale(1);
    opacity: 1;
  }

  100% {
    transform: scaleY(0);
    opacity: 0;
  }
}

/* Header */
header {
  margin-bottom: 2rem;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1rem;
  margin: -2rem -2rem;
  border-top-right-radius: 1rem;
  border-top-left-radius: 1rem;
  background-color: var(--accent-light);
}

.nav-head img {
  width: 30px;
  padding: 1px;
  border: 1px solid var(--primary);
  border-radius: 50%;
}

.nav-head div {
  font-size: 1.6rem;
  padding-left: 0.5rem;
}

.nav-links,
.nav-head,
.nav-tail {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  gap: 0.5rem;
}

.nav-tail {
  gap: 1.5rem;
  padding-right: 1rem;
}

.nav-links li a {
  display: inline-block;
  font-size: 1.4rem;
  padding: 0.5rem 1rem;
  border-top: 2px solid var(--accent-dark);
  border-right: 2px solid var(--accent-dark);
  border-radius: 4px 14px 4px 4px;
  text-decoration: none;
  color: var(--font-color);
  transition: all 0.4s ease-in-out;
}

.nav-links li a:hover {
  background-color: var(--accent-medium);
  transform: scale(1.08);
}

/* Dark Mode Toggle */
.toggle-switch {
  position: relative;
  width: 78px;
  height: 30.5px;
  margin: 2rem auto;
}

.toggle-switch input {
  display: none;
}

.toggle-label {
  background-color: var(--accent-light);
  border: 2px solid var(--primary);
  border-radius: 999px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  height: 100%;
  padding: 0 10px;
  transition: background-color 0.4s ease;
}

.toggle-bg {
  position: absolute;
  left: 0px;
  width: 43px;
  height: 26.5px;
  /* background-color: var(--accent-dark); */
  background: linear-gradient(145deg, var(--accent-dark), var(--accent-light));
  border-radius: 999px;
  border-right: 3px var(--primary) solid;
  transition: all 0.4s ease-in-out;
  z-index: 1;
}

.toggle-switch input:checked+.toggle-label .toggle-bg {
  transform: translateX(31px);
  border-left: 3px var(--primary) solid;
  border-right: 0px;
}

.toggle-switch input:checked+.toggle-label {
  color: 2px solid var(--font-color);
}

.icon {
  font-size: 1.4rem;
  z-index: 2;
  transition: opacity 0.4s ease;
}

.toggle-label .sun {
  opacity: 1;
}

.toggle-label .moon {
  opacity: 0;
}
/* ... */

